--- a/loginpage.css
+++ b/loginpage.css
@@ -53,7 +53,7 @@
   border-radius: 25px;
   width: 300px;
   height: 30px;
-  font-family: Arial, sans-serif;
+  font-family: Verdana, sans-serif;
 }
 .spacing{
   margin: 40px;
@@ -74,7 +74,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Verdana, sans-serif;
   margin: 0;
   background: #005cd4;
 }
