--- a/loginpage.css
+++ b/loginpage.css
@@ -37,7 +37,7 @@
   border-radius: 45px;
   padding: 20px;
   margin: 0;
-  position: static;
+  position: absolute;
   top: 80%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
@@ -86,6 +86,6 @@ body {
   font-size: small;
 }
 .mainLogo{
-  position: static;
+  position: absolute;
   left: 50%;
 }
