--- a/loginpage.css
+++ b/loginpage.css
@@ -89,4 +89,6 @@ body {
   position: absolute;
   left: 50%;
   top: 10%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
