--- a/loginpage.css
+++ b/loginpage.css
@@ -85,7 +85,7 @@ body {
   border: solid white;
   font-size: small;
 }
-.logoBox{
+#logoBox{
   width: 450px;
   height: 450px;
   position: absolute;
@@ -93,5 +93,5 @@ body {
   top: 10%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  
+
 }
