--- a/itemstyle.css
+++ b/itemstyle.css
@@ -302,6 +302,7 @@ nav img{
 
 /* --- Navigation Bar --- */
 nav, .topnav {
+    z-index: 10;    
     background-color: #d32f2f !important;
     color: #fff;
     box-shadow: 0 2px 10px rgba(211,47,47,0.08);
