--- a/classStyle.css
+++ b/classStyle.css
@@ -189,6 +189,54 @@ button {
   border: 1px solid black;
 }
 
+.topnav {
+    overflow: hidden;
+    background-color: #d32f2f;
+}
+
+.topnav a {
+    display: inline-block;
+    color: #fff;
+    margin: auto;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.topnav a:hover {
+    background-color: #b71c1c;
+    color: #fff;
+}
+
+nav{
+    position: fixed;
+    background-color: #d32f2f;
+    width: 100%;  
+    height: 100px; 
+    font-family: "Oswald", sans-serif;
+    list-style-type: none;
+    display: inline-flex;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.08);
+}  
+
+nav img{
+    margin-bottom: -25px;
+}
+
+.navMainText {
+    display: inline;
+    margin-top: 0px;
+    font-size: 60px;
+    float: left;
+    margin-left: 30px;
+    color: #fff;
+    padding-right: 60px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
 @media (max-width: 900px) {
     .classTable, #stdTable, #addClass {
         width: 99%;
