--- a/classStyle.css
+++ b/classStyle.css
@@ -189,6 +189,35 @@ button {
   border: 1px solid black;
 }
 
+/* --- Navigation Bar --- */
+nav {
+    position: fixed;
+    background-color: #d32f2f;
+    width: 100%;
+    height: 100px;
+    font-family: "Oswald", sans-serif;
+    list-style-type: none;
+    display: inline-flex;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.08);
+    z-index: 15;
+}
+
+nav img {
+    margin-bottom: -25px;
+}
+
+.navMainText {
+    display: inline;
+    margin-top: 0px;
+    font-size: 60px;
+    float: left;
+    margin-left: 30px;
+    color: #fff;
+    padding-right: 60px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
 .topnav {
     overflow: hidden;
     background-color: #d32f2f;
@@ -210,38 +239,21 @@ button {
     color: #fff;
 }
 
-nav, .topnav {
-    z-index: 15;
-    background-color: #d32f2f !important;
-    color: #fff;
-    box-shadow: 0 2px 10px rgba(211, 47, 47, 0.08);
-}
-
-nav{
-    position: fixed;
+/* Profile Button */
+.open-button {
     background-color: #d32f2f;
-    width: 100%;  
-    height: 100px; 
-    font-family: "Oswald", sans-serif;
-    list-style-type: none;
-    display: inline-flex;
-    box-shadow: 0px 2px 10px rgba(0,0,0,0.08);
-}  
-
-nav img{
-    margin-bottom: -25px;
-}
-
-.navMainText {
-    display: inline;
-    margin-top: 0px;
-    font-size: 60px;
-    float: left;
-    margin-left: 30px;
-    color: #fff;
-    padding-right: 60px;
-    font-weight: bold;
-    letter-spacing: 2px;
+    color: white;
+    padding: 16px 20px;
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    top: 23px;
+    right: 28px;
+    border: none;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.08);
 }
 
 @media (max-width: 900px) {
