--- a/classStyle.css
+++ b/classStyle.css
@@ -192,6 +192,7 @@ button {
 /* --- Navigation Bar --- */
 nav {
     position: fixed;
+    top: 0;
     background-color: #d32f2f;
     width: 100%;
     height: 100px;
